# pytest-fzf

./: .cruft.json  .pre-commit-config.yaml  README.md  README.rst  noxfile.py  pyproject.toml  setup.cfg
.github/workflows/: release.yml  tests.yml
src/pytest_fzf/: __init__.py  main.py  previewer.py
tests/: test_previewer.py  test_pytest_fzf.py
