[metadata]
description = fzf-based test selector for pytest
name = pytest_fzf
long_description = file: README.rst
long_description_content_type = text/x-rst
license = GNU GPL v3.0
license_file = LICENSE
url = https://github.com/dtrifiro/pytest-fzf
platforms=any
authors = Daniele Trifirò
maintainer_email = daniele@iterative.ai
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Development Status :: 1 - Planning

[options]
python_requires = >=3.8
zip_safe = False
package_dir=
    =src
packages = find:
install_requires=
    iterfzf>=0.5.0.20.0

[options.entry_points]
pytest11 =
    pytest-fzf = pytest_fzf.main

[options.extras_require]
tests =
    pytest==7.1.2
    pytest-sugar==0.9.5
    pytest-cov==3.0.0
    pytest-mock==3.8.2
    pylint==2.14.5
    mypy==0.971
dev =
    %(tests)s

[options.packages.find]
exclude =
    tests
    tests.*
where=src

[flake8]
ignore=
    E203, # Whitespace before ':'
    E266, # Too many leading '#' for block comment
    W503, # Line break occurred before a binary operator
    P1,  # unindexed parameters in the str.format, see:
    # https://pypi.org/project/flake8-string-format/
max_line_length = 79
max-complexity = 15
select = B,C,E,F,W,T4,B902,T,P
show_source = true
count = true
